payment-service/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
spec:
  selector:
    app: payment
  type: NodePort  
  ports:
    - port: 8080
      targetPort: 8080
