payment-service/payment-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: payment.browser
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: payment
              port: 
                number: 8080
